Add working one-way animation; change image file handling (prototype); needs more work

--- a/switcheroni/app/src/main/AndroidManifest.xml
+++ b/switcheroni/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:name=".core.SwitcheroniApplication"
@@ -23,6 +26,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".styles.StyleActivity" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.randomnoose.switcheroni"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
