--- a/switcheroni/app/build.gradle
+++ b/switcheroni/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.16'
@@ -41,6 +41,10 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    // Utils
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'commons-io:commons-io:2.6'
 
     // Tests
     testImplementation 'junit:junit:4.12'
